Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2317

[Python] fix C linkage warning

    XMLWordPrintableJSON

Details

    Description

      When using pyarrow interface from a c++ library one will get the following compiler warning:

      warning: 'unwrap_table' has C-linkage specified, but returns user-defined type 'arrow::Status' which is incompatible with C [-Wreturn-type-c-linkage]
      ARROW_EXPORT Status unwrap_table(PyObject* table, std::shared_ptr<Table>* out);

      This is due to a Cython artifact.

       

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              wiking Viktor Gal
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h