ARROW-2317: [Python] Fix C linkage warning with Cython